--- a/css/style.css
+++ b/css/style.css
@@ -16,9 +16,18 @@ nav {
   justify-content: right;
   }  
 
-nav > div {
-  font-size: 20px;
+nav > ul {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: right;
+  margin-right: 10px;
   font-weight: bold;
+  list-style: none;
+}
+
+nav > ul > li {
+  font-size: 20px;
   margin: 0 10px;
   color: whitesmoke;
 }
