--- a/css/style.css
+++ b/css/style.css
@@ -7,9 +7,12 @@
   box-sizing: inherit;
 }
 
-div {
+/* .page-container {
   height: 100vh;
-}
+  display: flex;
+  justify-content: center;
+  align-items: center;
+} */
 
 .navbar {
   position: fixed;
@@ -40,6 +43,43 @@ div {
   font-size: 20px;
   margin: 0 10px;
   color: whitesmoke;
+}
+
+/* h1 {
+  text-align: center;
+} */
+
+.page-container {
+  display: grid;
+  grid-template-columns: repeat(5, 20%);
+  grid-template-rows: repeat(5, 20%);
+  height: 100vh;
+  width: 100vw;
+  justify-items: center;
+  align-items: center;
+}
+
+.landing-h1 {
+  grid-column: 3 / 4;
+  grid-row: 3 / 4;
+  font-size: clamp(32px, 6vw, 40px);
+}
+
+.landing-h2 {
+  grid-column: 3 /4;
+  grid-row: 3/4;
+  margin-top: 5em;
+  font-size: clamp(12px, 6vw, 24px);
+}
+
+.about-h2 {
+  grid-column: 2 / 3;
+  grid-row: 2 / 3;
+}
+
+.about-p {
+  grid-column: 3 / 4;
+  grid-row: 3 / 4;
 }
 
 /* body {
