--- a/css/style.css
+++ b/css/style.css
@@ -73,14 +73,21 @@
 }
 
 .about-h2 {
-  grid-column: 2 / 3;
-  grid-row: 2 / 3;
+  grid-column: 3 / 4;
+  grid-row: 3 / 4;
 }
 
 .about-p {
   grid-column: 3 / 4;
   grid-row: 3 / 4;
 }
+
+.skills-h2 {
+  grid-column: 3 / 4;
+  grid-row: 3 / 4;
+}
+
+
 
 /* body {
   color: #40514E;
