--- a/css/style.css
+++ b/css/style.css
@@ -7,13 +7,6 @@
   box-sizing: inherit;
 }
 
-/* .page-container {
-  height: 100vh;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-} */
-
 .navbar {
   position: fixed;
   display: flex;
@@ -74,7 +67,14 @@
 
 .about-h2 {
   grid-column: 3 / 4;
-  grid-row: 3 / 4;
+  grid-row: 1/ 2;
+}
+
+.about-img {
+  grid-column: 3/4;
+  grid-row: 2/3;
+  height: 200px;
+  width: 200px;
 }
 
 .about-p {
@@ -84,8 +84,44 @@
 
 .skills-h2 {
   grid-column: 3 / 4;
-  grid-row: 3 / 4;
+  grid-row: 2 / 3;
 }
+
+.work-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+}
+
+.work-h2 {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
+
+.card {
+  margin: 10px;
+}
+
+.card-body {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+#card-container {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+	width: 100%;
+}
+
+
+
 
 
 
@@ -242,19 +278,4 @@ div {
   text-decoration: none;
 }
 
-h1.landing-text {
-  /* position: fixed;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%); */
-  /* text-align: center;
-} */
-
-/* h2.landing-text {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  margin-top: 10px;
-  margin-left: -100px;
-} */ 
 
