convert landing container and about container to flexbox

--- a/css/style.css
+++ b/css/style.css
@@ -52,7 +52,29 @@
   align-items: center;
 }
 
+.landing-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  height: 100vh;
+}
+
 .landing-h1 {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
+.landing-h2 {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
+/* .landing-h1 {
   grid-column: 3 / 4;
   grid-row: 3 / 4;
   font-size: clamp(32px, 6vw, 40px);
@@ -63,9 +85,40 @@
   grid-row: 3/4;
   margin-top: 5em;
   font-size: clamp(12px, 6vw, 24px);
+} */
+
+.about-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  height: 100vh;
 }
 
 .about-h2 {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
+.about-img {
+  grid-column: 3/4;
+  grid-row: 2/3;
+  height: 200px;
+  width: 200px;
+}
+
+.about-p {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  width: 60ch;
+}
+
+
+/* .about-h2 {
   grid-column: 3 / 4;
   grid-row: 1/ 2;
 }
@@ -80,7 +133,7 @@
 .about-p {
   grid-column: 3 / 4;
   grid-row: 3 / 4;
-}
+} */
 
 .skills-h2 {
   grid-column: 3 / 4;
@@ -102,9 +155,9 @@
   flex-direction: column;
 }
 
-
 .card {
   margin: 10px;
+  z-index: -1;
 }
 
 .card-body {
