--- a/css/style.css
+++ b/css/style.css
@@ -43,22 +43,27 @@
 } */
 
 .page-container {
-  display: grid;
-  grid-template-columns: repeat(5, 20%);
-  grid-template-rows: repeat(5, 20%);
-  height: 100vh;
-  width: 100vw;
-  justify-items: center;
-  align-items: center;
-}
-
-.landing-container {
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
   height: 100vh;
+  /* display: grid;
+  grid-template-columns: repeat(5, 20%);
+  grid-template-rows: repeat(5, 20%);
+  height: 100vh;
+  width: 100vw;
+  justify-items: center;
+  align-items: center; */
 }
+
+/* .landing-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  height: 100vh;
+} */
 
 .landing-h1 {
   display: flex;
@@ -87,13 +92,13 @@
   font-size: clamp(12px, 6vw, 24px);
 } */
 
-.about-container {
+/* .about-container {
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
   height: 100vh;
-}
+} */
 
 .about-h2 {
   display: flex;
@@ -136,17 +141,21 @@
 } */
 
 .skills-h2 {
-  grid-column: 3 / 4;
-  grid-row: 2 / 3;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  /* grid-column: 3 / 4;
+  grid-row: 2 / 3; */
 }
 
-.work-container {
+/* .work-container {
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
   height: 100vh;
-}
+} */
 
 .work-h2 {
   display: flex;
