--- a/css/style.css
+++ b/css/style.css
@@ -46,34 +46,49 @@ h3 {
 
 .navbar {
   position: fixed;
-  display: flex;
+  /* display: flex; */
   height: 60px;
   background-color: #40514E;
-  flex-direction: row;
+  /* flex-direction: row; */
   align-items: center;
-  justify-content: ;
+  justify-content: space-around;
   width: 100%;
   z-index: 2;
-  }  
+}  
 
-.navbar > ul {
+.nav-list {
+  list-style: none;
+  display: inline-block;
+
+}
+
+.nav-list .list-item {
+  display: inline-block;
+  margin:  0 10px;
+}
+
+.navbar a {
+  color: #eaeaea;
+  text-decoration: none;
+}
+/* .navbar > ul {
   display: flex;
   flex-direction: row;
   align-items: center;
-  justify-content: right;
+  justify-content: center;
   margin-right: 10px;
   font-weight: bold;
   list-style: none;
 }
 
 .navbar a {
-  display: block;
+  display:  inline-block;
   text-align: center;
   text-decoration: none;
   font-size: 20px;
   margin: 0 10px;
   color: whitesmoke;
-}
+} */
 
 .navbar-logo-ltdrk {
   display: flex;
@@ -82,6 +97,8 @@ h3 {
   align-items: center;
   flex-direction: row;
 }
+
+
 
 .page-container {
   display: flex;
@@ -241,8 +258,23 @@ body.dark {
   margin-right: 50;
 }
 
-@media only screen and (max-width: 768px) {
+@media only screen and (max-width: 600px) {
+  .navbar {
+    height: 80px;
+  }
 
+  .about-p {
+    margin: 0 50px;
+  }
+
+  h3 {
+    margin: 0 30px;
+    text-align: center;
+  }
+
+  .list-item {
+    font-size: small;
+  }
 
 }
 
