--- a/css/style.css
+++ b/css/style.css
@@ -235,7 +235,27 @@ h3 {
   color: #ffffff;
 }
 
+.hidden-contact-btns {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 20px;
+}
+
+.hidden-btn {
+  margin: 0 2px;
+}
+
+.copyright-btn {
+  color: var(--text-color);
+  text-decoration: none;
+  background-color: var(--bg-color);
+  border: none;
+}
+
 #light-dark-button {
+  margin-left: 10px;
+  border-radius: 5px;
   background-color: var(--light-dark-btn-bg);
 }
 
@@ -258,7 +278,7 @@ body.dark {
   margin-right: 50;
 }
 
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 650px) {
   .navbar {
     height: 80px;
   }
