--- a/css/style.css
+++ b/css/style.css
@@ -51,7 +51,7 @@ h3 {
   background-color: #40514E;
   flex-direction: row;
   align-items: center;
-  justify-content: space-around;
+  justify-content: center;
   width: 100%;
   z-index: 2;
 }  
