--- a/css/style.css
+++ b/css/style.css
@@ -167,6 +167,16 @@ h3 {
 .card {
   margin: 10px;
   color: #22232b;
+  transition: all .2s ease-in-out;
+}
+
+.card:hover {
+  transform: scale(1.1);
+}
+
+.card-img-top {
+  max-width: 100%;
+  max-height: 50%;
 }
 
 .card-body {
