--- a/css/style.css
+++ b/css/style.css
@@ -69,6 +69,10 @@ h3 {
   margin:  0 10px;
 }
 
+.list-item:hover {
+  text-decoration: underline;
+}
+
 .navbar a {
   color: #eaeaea;
   text-decoration: none;
@@ -80,6 +84,18 @@ h3 {
   justify-items: flex-start;
   align-items: center;
   flex-direction: row;
+}
+
+#resume-download-btn {
+  border-color: var(--heading-color);
+  border-style: solid;
+  border-width: 2px;
+  border-radius: 5px;
+  padding: 5px;
+}
+
+#resume-download-btn-small {
+  display: none;
 }
 
 .page-container {
@@ -133,6 +149,7 @@ h3 {
   align-items: center;
   flex-direction: column;
   max-width: 80ch;
+  margin: 0 20px;
 }
 
 .skills-h2 {
@@ -171,7 +188,7 @@ h3 {
 }
 
 .card:hover {
-  transform: scale(1.1);
+  transform: scale(1.05);
 }
 
 .card-img-top {
@@ -322,6 +339,21 @@ body.dark {
   .navbar {
     height: 80px;
   }
+
+  .nav-list {
+    list-style: none;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    padding-top: 15px;
+  }
+  
+
+  
+  .navbar a {
+    color: #eaeaea;
+    text-decoration: none;
+  }
   
   .logo-img {
     height: 30px;
@@ -359,6 +391,36 @@ body.dark {
 
 }
 
+@media only screen and (max-width: 400px) {
+  .navbar {
+    height: 80px;
+    margin-bottom: 50px;
+  }
 
+  .nav-list {
+    list-style: none;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    padding-top: 15px;
+    padding-bottom: 100px;
+  }
+
+  #resume-download-btn {
+    display: none
+  }
+
+  #resume-download-btn-small {
+    border-color: #40514E;
+    border-style: solid;
+    border-width: 2px;
+    border-radius: 5px;
+    padding: 5px;
+    margin: 15px;
+    display: inline-block;
+    color: #40514E;
+    text-decoration: none;
+  }
+}
 
 
